# CROSS-implementation

./: .gitignore  COMPILATION_GUIDE.md  Makefile  Makefile.example  README.md  test_dispatch_diagnostic.c  verify_nist_kats.sh
Additional_Implementations/KAT_Generation/: CMakeLists.txt
Optimized_Implementation/include/: csprng_hash.h
Reference_Implementation/include/: CROSS.h  csprng_hash.h  merkle_tree.h  pack_unpack.h  seedtree.h
Unified_Implementation/include/: CROSS_dispatch.h  CROSS_namespace.h  cpu_features.h
Unified_Implementation/lib/: dispatch.c  test_dispatch.c
